# guardflow

./: .gitignore  01_cli_contract_execution_pipeline.md  02_strict_schema_enforcement.md  04_rbac_authorization_layer.md  05_docker_sandbox_isolation.md  CHANGELOG.md  Dockerfile  README.md  policy.json  pyproject.toml  rbac_policy.csv
examples/: code_exec.json  echo.json  file_read.json  http_request.json  shell_command.json
milestones/: 03_tool_allowlist_policy_gate.md  06_redteam_guardrail_regression.md
src/guardflow/: cli.py  models.py  pipeline.py  policy.py  rbac.py  redteam.py  sandbox.py  server.py
tests/: test_allowlist.py  test_cli.py  test_rbac.py  test_redteam.py  test_sandbox.py  test_schema.py
tests/fixtures/: python_exec_safe.json
tests/fixtures/redteam/: data_exfiltration_blocked.json  prompt_injection_contained.json  role_escalation_blocked.json  schema_extra_field_blocked.json  tool_name_injection_blocked.json  unauthorized_tool_blocked.json
